@@ -230,7 +230,7 @@
                         <configuration>
                             <classpathScope>test</classpathScope>
                             <executable>${java.home}/bin/java</executable>
-                            <commandlineArgs>--enable-preview -cp %classpath -Dnitro.clickbench.hits.path=${nitro.clickbench.hits.path} org.openjdk.jmh.Main ${benchmark.include} ${benchmark.options}</commandlineArgs>
+                            <commandlineArgs>--enable-preview --add-modules jdk.incubator.vector -cp %classpath -Dnitro.clickbench.hits.path=${nitro.clickbench.hits.path} org.openjdk.jmh.Main ${benchmark.include} ${benchmark.options}</commandlineArgs>
                         </configuration>
                     </execution>
                 </executions>
